--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 	    <meta name="keywords" content="keywords">
 			<script src="js/three.js"></script>
     	<style>
-      body {
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
-      }
+	      body {
+	        padding: 0;
+	        margin: 0;
+	        overflow: hidden;
+	      }
       </style>
   </head>
-	<body>
-		<div id="canvas"></div>
-		  <script>
-
+		<body>
+			<div id="canvas"></div>
+			<script>
 			//Create an AudioListener and add it to the camera
 				var camera, scene, renderer, particles, particle, material, particleCount, points, texture;
 				var xSpeed, ySpeed;
@@ -29,93 +28,83 @@
 				winWidth = window.innerWidth;
 				winHeight = window.innerHeight;
 
-				init();
-				animate();
 
-				function init(){
-				 scene = new THREE.Scene();
-				 scene.fog = new THREE.FogExp2('#222', 0.001);
+				scene = new THREE.Scene();
+				scene.fog = new THREE.FogExp2('#222', 0.001);
 
-				 camera = new THREE.PerspectiveCamera(75, winWidth/winHeight, 1, 1000);
-				 camera.position.z = 500;
+				camera = new THREE.PerspectiveCamera(75, winWidth/winHeight, 1, 1000);
+				camera.position.z = 500;
 
-				 var listener = new THREE.AudioListener();
- 				camera.add( listener );
+				var listener = new THREE.AudioListener();
+				camera.add( listener );
 
- 				// create an Audio source
- 				var sound = new THREE.Audio( listener );
- 				var audioLoader = new THREE.AudioLoader();
+				// create an Audio source
+				var sound = new THREE.Audio( listener );
+				var audioLoader = new THREE.AudioLoader();
 
- 				//Load a sound and set it as the Audio object's buffer
- 				audioLoader.load( 'assets/holy.mp3', function( buffer ) {
- 					sound.setBuffer( buffer );
- 					sound.setLoop(true);
- 					sound.setVolume(0.5);
- 					sound.play();
- 				});
+				//Load a sound and set it as the Audio object's buffer
+				audioLoader.load( 'assets/holy.mp3', function( buffer ) {
+				sound.setBuffer( buffer );
+				sound.setLoop(true);
+				sound.setVolume(0.5);
+				sound.play();
+				});
 
 				//Create an AudioAnalyser, passing in the sound and desired fftSize
 				var analyser = new THREE.AudioAnalyser( sound, 32 );
 
-				console.log(analyser);
+				material = new THREE.PointsMaterial({
+				color: 0xffffff,
+				size: 3,
+				transparent: true,
+				blending: THREE.AdditiveBlending
+				});
 
-				 material = new THREE.PointsMaterial({
-					 color: 0xffffff,
-					 size: 3,
-					 transparent: true,
-					 blending: THREE.AdditiveBlending
-				 });
+				particleCount = 15000;
+				particles = new THREE.Geometry();
 
-				 particleCount = 15000;
-				 particles = new THREE.Geometry();
-
-				 for (var i = 0; i < particleCount; i++) {
-					 var px = Math.random() * 2000 - 1000;
-					 var py = Math.random() * 2000 - 1000;
-					 var pz = Math.random() * 2000 - 1000;
-					 particle = new THREE.Vector3(px, py, pz);
-					 particle.velocity = new THREE.Vector3(0, Math.random(), 0);
-					 particles.vertices.push(particle);
-				 }
-
-				 points = new THREE.Points(particles, material);
-				 points.sortParticles = true;
-				 scene.add(points);
-
-				 renderer = new THREE.WebGLRenderer({ antialias: true });
-				 renderer.setSize(winWidth, winHeight);
-				 renderer.setClearColor('#222', 1);
-				 document.getElementById('canvas').appendChild(renderer.domElement);
+				for (var i = 0; i < particleCount; i++) {
+				var px = Math.random() * 2000 - 1000;
+				var py = Math.random() * 2000 - 1000;
+				var pz = Math.random() * 2000 - 1000;
+				particle = new THREE.Vector3(px, py, pz);
+				particle.velocity = new THREE.Vector3(0, Math.random(), 0);
+				particles.vertices.push(particle);
 				}
 
+				points = new THREE.Points(particles, material);
+				points.sortParticles = true;
+				scene.add(points);
+
+				renderer = new THREE.WebGLRenderer({ antialias: true });
+				renderer.setSize(winWidth, winHeight);
+				renderer.setClearColor('#222', 1);
+				document.getElementById('canvas').appendChild(renderer.domElement);
+
 				function animate(){
-				 requestAnimationFrame(animate);
-
-				 scene.rotation.y += xSpeed;
-
-				 var i = particleCount;
-				 while(i--){
-					 var particle = particles.vertices[i];
-
-					 if(particle.y > 1000){
-						 particle.y = -1000;
-						 particle.velocity.y = Math.random();
-					 }
-					 particle.velocity.y += Math.random() * ySpeed;
-
-					 particle.add(particle.velocity);
-				   }
-				   points.geometry.verticesNeedUpdate = true;
-
-				  render();
+				requestAnimationFrame(animate);
+				scene.rotation.y += xSpeed;
+				var i = particleCount;
+				while(i--){
+				var particle = particles.vertices[i];
+				if(particle.y > 1000){
+					particle.y = -1000;
+					particle.velocity.y = Math.random();
+				}
+				particle.velocity.y += Math.random() * ySpeed;
+				particle.add(particle.velocity);
+				}
+				points.geometry.verticesNeedUpdate = true;
+				render();
 				}
 
 				function render(){
-				 camera.lookAt(scene.position);
-				 renderer.render(scene, camera);
-				 analyser.getAverageFrequency();
+				camera.lookAt(scene.position);
+				renderer.render(scene, camera);
+				analyser.getAverageFrequency();
+				console.log(analyser.getAverageFrequency())
 				}
 
-
+				animate();
 			</script>
   </body>
