--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<body>
 			<div id="canvas"></div>
 			<script>
-			//Create an AudioListener and add it to the camera
+			  //Create an AudioListener and add it to the camera
 				var camera, scene, renderer, particles, particle, material, particleCount, points, texture;
 				var xSpeed, ySpeed;
 				xSpeed = 0.0005;
@@ -28,6 +28,7 @@
 				winWidth = window.innerWidth;
 				winHeight = window.innerHeight;
 
+        var easing = 0.5;
 
 				scene = new THREE.Scene();
 				scene.fog = new THREE.FogExp2('#222', 0.001);
@@ -36,73 +37,89 @@
 				camera.position.z = 500;
 
 				var listener = new THREE.AudioListener();
-				camera.add( listener );
+				camera.add(listener);
 
 				// create an Audio source
 				var sound = new THREE.Audio( listener );
 				var audioLoader = new THREE.AudioLoader();
 
 				//Load a sound and set it as the Audio object's buffer
-				audioLoader.load( 'assets/holy.mp3', function( buffer ) {
-				sound.setBuffer( buffer );
-				sound.setLoop(true);
-				sound.setVolume(0.5);
-				sound.play();
+				audioLoader.load('assets/holy.mp3', function(buffer) {
+				  sound.setBuffer(buffer);
+				  sound.setLoop(true);
+				  sound.setVolume(0.5);
+				  sound.play();
 				});
 
 				//Create an AudioAnalyser, passing in the sound and desired fftSize
 				var analyser = new THREE.AudioAnalyser( sound, 32 );
 
 				material = new THREE.PointsMaterial({
-				color: 0xffffff,
-				size: 3,
-				transparent: true,
-				blending: THREE.AdditiveBlending
+  				color: 0xffffff,
+  				size: 3,
+  				transparent: true,
+  				blending: THREE.AdditiveBlending
 				});
 
 				particleCount = 15000;
 				particles = new THREE.Geometry();
 
 				for (var i = 0; i < particleCount; i++) {
-				var px = Math.random() * 2000 - 1000;
-				var py = Math.random() * 2000 - 1000;
-				var pz = Math.random() * 2000 - 1000;
-				particle = new THREE.Vector3(px, py, pz);
-				particle.velocity = new THREE.Vector3(0, Math.random(), 0);
-				particles.vertices.push(particle);
+  				var px = Math.random() * 2000 - 1000;
+  				var py = Math.random() * 2000 - 1000;
+  				var pz = Math.random() * 2000 - 1000;
+  				particle = new THREE.Vector3(px, py, pz);
+          particle.position = particle.clone();
+  				particle.velocity = new THREE.Vector3(0, Math.random(), 0);
+  				particles.vertices.push(particle);
 				}
 
 				points = new THREE.Points(particles, material);
 				points.sortParticles = true;
 				scene.add(points);
 
-				renderer = new THREE.WebGLRenderer({ antialias: true });
+				renderer = new THREE.WebGLRenderer({antialias: true});
 				renderer.setSize(winWidth, winHeight);
 				renderer.setClearColor('#222', 1);
 				document.getElementById('canvas').appendChild(renderer.domElement);
 
 				function animate(){
-				requestAnimationFrame(animate);
-				scene.rotation.y += xSpeed;
-				var i = particleCount;
-				while(i--){
-				var particle = particles.vertices[i];
-				if(particle.y > 1000){
-					particle.y = -1000;
-					particle.velocity.y = Math.random();
-				}
-				particle.velocity.y += Math.random() * ySpeed;
-				particle.add(particle.velocity);
-				}
-				points.geometry.verticesNeedUpdate = true;
-				render();
+  				requestAnimationFrame(animate);
+  				render();
 				}
 
-				function render(){
-				camera.lookAt(scene.position);
-				renderer.render(scene, camera);
-				analyser.getAverageFrequency();
-				console.log(analyser.getAverageFrequency())
+				function render() {
+  				camera.lookAt(scene.position);
+
+          var average = analyser.getAverageFrequency();
+          var amplifiedAverage = Math.pow(average, 2);
+
+          scene.rotation.y += xSpeed;
+          var i = particleCount;
+          while(i--) {
+            var particle = particles.vertices[i];
+            if(particle.position.y > 1000) {
+              particle.position.y = -1000;
+              particle.velocity.y = Math.random();
+            }
+
+            particle.velocity.y += Math.random() * ySpeed;
+            particle.position.add(particle.velocity);
+            particle.set(
+              particle.position.x,
+              particle.position.y,
+              particle.position.z
+            ).add(new THREE.Vector3(
+              (particle.velocity.x < 0 ? -1 : 1)*amplifiedAverage*0.0005,
+              (particle.velocity.y < 0 ? -1 : 1)*amplifiedAverage*0.0005,
+              (particle.velocity.z < 0 ? -1 : 1)*amplifiedAverage*0.0005
+            ));
+          }
+
+          material.opacity = amplifiedAverage*0.00005;
+          points.geometry.verticesNeedUpdate = true;
+
+  				renderer.render(scene, camera);
 				}
 
 				animate();
