--- a/index.html
+++ b/index.html
@@ -1,127 +1,128 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-	    <title>Black Particles</title>
-	    <meta name="description" content="description">
-	    <meta name="author" content="name">
-	    <meta name="keywords" content="keywords">
-			<script src="js/three.js"></script>
-    	 <style>
-	      body {
-	        padding: 0;
-	        margin: 0;
-	        overflow: hidden;
-	      }
-        </style>
-      </head>
-		<body>
-			<div id="canvas"></div>
-			<script>
-			  //Create an AudioListener and add it to the camera
-				var camera, scene, renderer, particles, particle, material, particleCount, points, texture;
-				var xSpeed, ySpeed;
-				xSpeed = 0.0005;
-				ySpeed = 0.001;
-				var winWidth, winHeight;
-				winWidth = window.innerWidth;
-				winHeight = window.innerHeight;
+    <title>Black Particles</title>
+    <meta name="description" content="description">
+    <meta name="author" content="name">
+    <meta name="keywords" content="keywords">
+    <script src="js/three.js"></script>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="canvas"></div>
+    <script>
+      //Create an AudioListener and add it to the camera
+      var camera, scene, renderer, particles, particle, material, particleCount, points, texture;
+      var xSpeed, ySpeed;
+      xSpeed = 0.0005;
+      ySpeed = 0.001;
+      var winWidth, winHeight;
+      winWidth = window.innerWidth;
+      winHeight = window.innerHeight;
 
-        var easing = 0.5;
+      var easing = 0.5;
 
-				scene = new THREE.Scene();
-				scene.fog = new THREE.FogExp2('#222', 0.001);
+      scene = new THREE.Scene();
+      scene.fog = new THREE.FogExp2('#222', 0.001);
 
-				camera = new THREE.PerspectiveCamera(75, winWidth/winHeight, 1, 1000);
-				camera.position.z = 500;
+      camera = new THREE.PerspectiveCamera(75, winWidth/winHeight, 1, 1000);
+      camera.position.z = 500;
 
-				var listener = new THREE.AudioListener();
-				camera.add(listener);
+      var listener = new THREE.AudioListener();
+      camera.add(listener);
 
-				// create an Audio source
-				var sound = new THREE.Audio( listener );
-				var audioLoader = new THREE.AudioLoader();
+      // create an Audio source
+      var sound = new THREE.Audio( listener );
+      var audioLoader = new THREE.AudioLoader();
 
-				//Load a sound and set it as the Audio object's buffer
-				audioLoader.load('assets/holy.mp3', function(buffer) {
-				  sound.setBuffer(buffer);
-				  sound.setLoop(true);
-				  sound.setVolume(0.5);
-				  sound.play();
-				});
+      //Load a sound and set it as the Audio object's buffer
+      audioLoader.load('assets/holy.mp3', function(buffer) {
+        sound.setBuffer(buffer);
+        sound.setLoop(true);
+        sound.setVolume(0.5);
+        sound.play();
+      });
 
-				//Create an AudioAnalyser, passing in the sound and desired fftSize
-				var analyser = new THREE.AudioAnalyser( sound, 32 );
+      //Create an AudioAnalyser, passing in the sound and desired fftSize
+      var analyser = new THREE.AudioAnalyser( sound, 32 );
 
-				material = new THREE.PointsMaterial({
-  				color: 0xffffff,
-  				size: 3,
-  				transparent: true,
-  				blending: THREE.AdditiveBlending
-				});
+      material = new THREE.PointsMaterial({
+        color: 0xffffff,
+        size: 3,
+        transparent: true,
+        blending: THREE.AdditiveBlending
+      });
 
-				particleCount = 15000;
-				particles = new THREE.Geometry();
+      particleCount = 15000;
+      particles = new THREE.Geometry();
 
-				for (var i = 0; i < particleCount; i++) {
-  				var px = Math.random() * 2000 - 1000;
-  				var py = Math.random() * 2000 - 1000;
-  				var pz = Math.random() * 2000 - 1000;
-  				particle = new THREE.Vector3(px, py, pz);
-          particle.position = particle.clone();
-  				particle.velocity = new THREE.Vector3(0, Math.random(), 0);
-  				particles.vertices.push(particle);
-				}
+      for (var i = 0; i < particleCount; i++) {
+        var px = Math.random() * 2000 - 1000;
+        var py = Math.random() * 2000 - 1000;
+        var pz = Math.random() * 2000 - 1000;
+        particle = new THREE.Vector3(px, py, pz);
+        particle.position = particle.clone();
+        particle.velocity = new THREE.Vector3(0, Math.random(), 0);
+        particles.vertices.push(particle);
+      }
 
-				points = new THREE.Points(particles, material);
-				points.sortParticles = true;
-				scene.add(points);
+      points = new THREE.Points(particles, material);
+      points.sortParticles = true;
+      scene.add(points);
 
-				renderer = new THREE.WebGLRenderer({antialias: true});
-				renderer.setSize(winWidth, winHeight);
-				renderer.setClearColor('#222', 1);
-				document.getElementById('canvas').appendChild(renderer.domElement);
+      renderer = new THREE.WebGLRenderer({antialias: true});
+      renderer.setSize(winWidth, winHeight);
+      renderer.setClearColor('#222', 1);
+      document.getElementById('canvas').appendChild(renderer.domElement);
 
-				function animate(){
-  				requestAnimationFrame(animate);
-  				render();
-				}
+      function animate(){
+        requestAnimationFrame(animate);
+        render();
+      }
 
-				function render() {
-  				camera.lookAt(scene.position);
+      function render() {
+        camera.lookAt(scene.position);
 
-          var average = analyser.getAverageFrequency();
-          var amplifiedAverage = Math.pow(average, 2);
+        var average = analyser.getAverageFrequency();
+        var amplifiedAverage = Math.pow(average, 2);
 
-          scene.rotation.y += xSpeed;
-          var i = particleCount;
-          while(i--) {
-            var particle = particles.vertices[i];
-            if(particle.position.y > 1000) {
-              particle.position.y = -1000;
-              particle.velocity.y = Math.random();
-            }
-
-            particle.velocity.y += Math.random() * ySpeed;
-            particle.position.add(particle.velocity);
-            particle.set(
-              particle.position.x,
-              particle.position.y,
-              particle.position.z
-            ).add(new THREE.Vector3(
-              (particle.velocity.x < 0 ? -1 : 1)*amplifiedAverage*0.0005,
-              (particle.velocity.y < 0 ? -1 : 1)*amplifiedAverage*0.0005,
-              (particle.velocity.z < 0 ? -1 : 1)*amplifiedAverage*0.0005
-            ));
+        scene.rotation.y += xSpeed;
+        var i = particleCount;
+        while(i--) {
+          var particle = particles.vertices[i];
+          if(particle.position.y > 1000) {
+            particle.position.y = -1000;
+            particle.velocity.y = Math.random();
           }
 
-          material.opacity = amplifiedAverage*0.00005;
-          points.geometry.verticesNeedUpdate = true;
+          particle.velocity.y += Math.random() * ySpeed;
+          particle.position.add(particle.velocity);
+          particle.set(
+            particle.position.x,
+            particle.position.y,
+            particle.position.z
+          ).add(new THREE.Vector3(
+            (particle.velocity.x < 0 ? -1 : 1)*amplifiedAverage*0.0005,
+            (particle.velocity.y < 0 ? -1 : 1)*amplifiedAverage*0.0005,
+            (particle.velocity.z < 0 ? -1 : 1)*amplifiedAverage*0.0005
+          ));
+        }
 
-  				renderer.render(scene, camera);
-				}
+        material.opacity = amplifiedAverage*0.00005;
+        points.geometry.verticesNeedUpdate = true;
 
-				animate();
-			</script>
-		</body>
+        renderer.render(scene, camera);
+      }
+
+      animate();
+    </script>
+  </body>
+</html>
